removed dom manipulation and hardcoded html

--- a/tic-tac-toe/ttt.html
+++ b/tic-tac-toe/ttt.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,6 +10,29 @@
     <title>Tik-Tok-Toe</title>
   </head>
   <body>
-    <div class="board-container"></div>
+    <div class="activePlayer-container">
+      <textarea name="activePlayer" cols="30" rows="10">
+ CurrentPlayer:</textarea
+      >
+    </div>
+    <div class="board-container">
+      <table>
+        <tr>
+          <td><button id="index-0"></button></td>
+          <td><button id="index-1"></button></td>
+          <td><button id="index-2"></button></td>
+        </tr>
+        <tr>
+          <td><button id="index-3"></button></td>
+          <td><button id="index-4"></button></td>
+          <td><button id="index-5"></button></td>
+        </tr>
+        <tr>
+          <td><button id="index-6"></button></td>
+          <td><button id="index-7"></button></td>
+          <td><button id="index-8"></button></td>
+        </tr>
+      </table>
+    </div>
   </body>
 </html>
