--- a/tic-tac-toe/ttt.html
+++ b/tic-tac-toe/ttt.html
@@ -18,19 +18,73 @@
     <div class="board-container">
       <table>
         <tr>
-          <td><button id="index-0"></button></td>
-          <td><button id="index-1"></button></td>
-          <td><button id="index-2"></button></td>
+          <td>
+            <button
+              class="table-button"
+              id="0"
+              onclick="gameBoard.update(this.id)"
+            ></button>
+          </td>
+          <td>
+            <button
+              class="table-button"
+              id="1"
+              onclick="gameBoard.update(this.id)"
+            ></button>
+          </td>
+          <td>
+            <button
+              class="table-button"
+              id="2"
+              onclick="gameBoard.update(this.id)"
+            ></button>
+          </td>
         </tr>
         <tr>
-          <td><button id="index-3"></button></td>
-          <td><button id="index-4"></button></td>
-          <td><button id="index-5"></button></td>
+          <td>
+            <button
+              class="table-button"
+              id="3"
+              onclick="gameBoard.update(this.id)"
+            ></button>
+          </td>
+          <td>
+            <button
+              class="table-button"
+              id="4"
+              onclick="gameBoard.update(this.id)"
+            ></button>
+          </td>
+          <td>
+            <button
+              class="table-button"
+              id="5"
+              onclick="gameBoard.update(this.id)"
+            ></button>
+          </td>
         </tr>
         <tr>
-          <td><button id="index-6"></button></td>
-          <td><button id="index-7"></button></td>
-          <td><button id="index-8"></button></td>
+          <td>
+            <button
+              class="table-button"
+              id="6"
+              onclick="gameBoard.update(this.id)"
+            ></button>
+          </td>
+          <td>
+            <button
+              class="table-button"
+              id="7"
+              onclick="gameBoard.update(this.id)"
+            ></button>
+          </td>
+          <td>
+            <button
+              class="table-button"
+              id="8"
+              onclick="gameBoard.update(this.id)"
+            ></button>
+          </td>
         </tr>
       </table>
     </div>
